--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-jazzmin==2.4.9
 django-phone-field==1.8.1
 django-registration==3.1.2
 django-tinymce==3.4.0
+django-widget-tweaks==1.4.12
 djangorestframework==3.13.0
 gunicorn==20.1.0
 idna==3.3
