--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-emoji-picker==0.0.6
 django-extensions==2.2.5
 django-heroku==0.3.1
 django-jazzmin==2.4.9
+django-mathfilters==1.0.0
 django-phone-field==1.8.1
 django-registration==3.1.2
 django-tinymce==3.4.0
@@ -32,10 +33,15 @@ Pillow==8.4.0
 psycopg2==2.8.6
 pycodestyle==2.8.0
 pycparser==2.21
+PyJWT==2.3.0
 python-decouple==3.5
+python3-openid==3.2.0
 pytz==2021.3
 requests==2.26.0
+requests-oauthlib==1.3.0
 six==1.16.0
+social-auth-app-django==5.0.0
+social-auth-core==4.2.0
 soupsieve==2.3.1
 sqlparse==0.4.2
 toml==0.10.2
