--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ dj3-cloudinary-storage==0.0.6
 Django==3.2.9
 django-bootstrap4==21.1
 django-crispy-forms==1.13.0
+django-daraja==1.2.0
 django-emoji-picker==0.0.6
 django-extensions==2.2.5
 django-heroku==0.3.1
@@ -32,7 +33,6 @@ importlib-metadata==2.1.2
 importlib-resources==5.4.0
 oauthlib==3.1.1
 Pillow==8.4.0
-pkg_resources==0.0.0
 psycopg2==2.8.6
 pycodestyle==2.8.0
 pycparser==2.21
@@ -48,7 +48,7 @@ social-auth-core==4.2.0
 soupsieve==2.3.1
 sqlparse==0.4.2
 toml==0.10.2
-typing_extensions==4.0.1
+typing-extensions==4.0.1
 urllib3==1.26.7
 whitenoise==5.3.0
 zipp==3.6.0
