--- a/requirements.txt
+++ b/requirements.txt
@@ -21,15 +21,19 @@ django-extensions==2.2.5
 django-heroku==0.3.1
 django-jazzmin==2.4.9
 django-mathfilters==1.0.0
+django-paypal==1.1.2
 django-phone-field==1.8.1
 django-registration==3.1.2
 django-tinymce==3.4.0
 django-widget-tweaks==1.4.12
 djangorestframework==3.13.0
+ez-setup==0.9
 gunicorn==20.1.0
 idna==3.3
 importlib-metadata==2.1.2
+importlib-resources==5.4.0
 oauthlib==3.1.1
+paypal==1.2.5
 Pillow==8.4.0
 psycopg2==2.8.6
 pycodestyle==2.8.0
